Use Arrays.asList instead of List.of to stay compatible with Java 1.8